* Renamed `is-disabled` to `is-faded` + restyled the state * Fixed a datepicker display issue on Firefox

--- a/src/styles/molecules/_molecules.datepicker.scss
+++ b/src/styles/molecules/_molecules.datepicker.scss
@@ -59,12 +59,9 @@
   button {
     background-color: transparent;
     border: none;
-    bottom: 0;
-    left: 0;
+    height: 100%;
     padding: 0;
     position: absolute;
-    right: 0;
-    top: 0;
     transition: background $animation-normal;
     width: 100%;
 
@@ -96,13 +93,13 @@
       }
     }
 
-    &.is-disabled {
+    &.is-faded {
       background-color: $datepicker-disabled-bg;
       color: $datepicker-disabled-color;
 
       &:hover,
       &:active {
-        background-color: $datepicker-disabled-bg;
+        background-color: $datepicker-disabled-bg-hover;
       }
     }
 
